fix top section of the page so the img doesn't overlap with the header

--- a/style.css
+++ b/style.css
@@ -1,5 +1,88 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+/*body {
+    font-family: Roboto, sans-serif;
+    margin: 0;
+}
+
+ul {
+    list-style: none;
+    display: flex; 
+    gap: 18px; 
+    
+    
+}
+
+a {
+    text-decoration: none;
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.main-div1 {
+    background-color: #1f2937;
+    height: 500px;  
+    
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+    padding: 20px;  
+        
+}
+
+
+.header-logo {
+    font-weight: bold;
+    font-size: 24px;
+    color: #F9FAF8;
+    margin-right: auto;
+    
+    
+}
+
+.flex-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+              
+}
+
+.header-text {
+    max-width: 470px;
+
+    
+}
+
+.header-big-text {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+    margin-bottom: 16px;
+}
+
+.header-small-text {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.header-button {
+    background-color: #3882f6;
+    font-weight: bold;
+    font-size: 18px;
+    color: #F9FAF8;
+    border: none;
+    border-radius: 6px;
+    padding: 8px 30px;
+    margin-top: 16px;
+}
+
+.header, img {
+   width: 400px;
+}*/
 body {
     font-family: Roboto, sans-serif;
     display: flex;
@@ -77,6 +160,7 @@ a {
 
 .header-img {
    width: 400px;
+   
 }
   
 .main-div2 {
@@ -119,7 +203,7 @@ a {
     justify-content: center;
 /* Adding an align-items: center rule will also center the author div, making it unable to move. */ 
     background-color: #e5e7eb; 
-    height: 400px;  
+    height: 400px; 
 }
 .sub-div3 {
     margin: auto;
@@ -130,7 +214,7 @@ a {
     font-style: italic;
     color: #1f2937;
     max-width: 820px;
-    margin: auto;  
+    margin: auto; 
 }
 
 .author {
@@ -141,9 +225,12 @@ a {
 }
 
 .main-div4 { 
-    padding: 30px;
-    border-radius: 6px;
-    padding: 50px;   
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+    height: 300px;     
 }
 
 .call-to-action {
@@ -153,35 +240,39 @@ a {
     background-color: #3882f6;
     border-radius: 6px;
     color: #e5e7eb;
-    padding: 42px;
+    width: 1000px;
+    height: 160px; 
+    
 }
 
 h4 {
-    font-size: 16px;
+    font-size: 24px;
     font-weight: bolder;
+    color: #F9FAF8;
     margin: 0;
 }
 
 .call-to-action-text {
-    font-size: 12px;
+    font-size: 18px;
+    color: #e5e7eb;
 }
 
 .call-to-action-button {
-    border: 2px solid #e5e7eb;
+    border: 2px solid #F9FAF8;
     border-radius: 6px;
     background-color: #3882f6;
-    color: #e5e7eb;
+    color: #F9FAF8;
     font-weight: bolder;
-    font-size: 12px;
-    padding: 6px 20px
+    font-size: 18px;
+    padding: 6px 30px
 }
 
 .footer {
     background-color: #1f2937;
-    color: #e5e7eb;
-    font-size: 12px;
+    color: #F9FAF8;
+    font-size: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 24px;  
+    padding: 30px;  
 }
